--- a/css/styles.css
+++ b/css/styles.css
@@ -399,6 +399,8 @@ That is it looks in optimum distance. */
 .portfolio {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px 1rem;
+  
   /* We could have used repeat(3, 1fr) but we have used auto fit instead.
   Here 300px means min this much size should be there but it has to be 1fr per section. */
   /* we can set max-width here then we have to set the margin to 0 to maintain that. */
@@ -411,6 +413,15 @@ That is it looks in optimum distance. */
 
 .portfolio__img {
   transition: transform 750ms cubic-bezier(0.5, 1, 0.5, 1), opacity 250ms linear;
+  border-radius: .5rem;
+  width: 100%;
+  height: 80%;
+}
+.portfolio__block {
+  align-items: center;
+  /* background-color: var(--clr-accent); */
+  color: var(--clr-accent);
+
 }
 
 .portfolio__item:focus {
@@ -418,7 +429,7 @@ That is it looks in optimum distance. */
   z-index: 2;
 }
 .portfolio__img:hover,
-.portfolio__item:focus .portfolio__img {
+.portfolio__item:focus  {
   transform: scale(1.2);
   opacity: 0.5;
 }
